<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deco.SizeCheckActivity"
    android:id="@+id/layout_deco">

    <include
        layout="@layout/deco_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_deco_model"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/controlsPanel"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/panel">
        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/clear_drawing"/>
        <ImageView
            android:id="@+id/undoButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:src="@drawable/ic_undo"
            android:contentDescription="@string/undo_last_drawing_element"/>

        <ImageView
            android:id="@+id/colorPickerIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_selected_white"
            android:contentDescription="@string/select_color"/>

        <ImageView
            android:id="@+id/btn_deco_model"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:src="@drawable/bighornsheep"/>

        <ImageView
            android:id="@+id/btn_deco_capture"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:src="@drawable/capture"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colorPanel"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/panel"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/whiteCircle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_white_circle"
            android:contentDescription="@string/white_color"/>
        <ImageView
            android:id="@+id/redCircle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_red_circle"
            android:contentDescription="@string/red_color"/>
        <ImageView
            android:id="@+id/greenCircle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_green_circle"
            android:contentDescription="@string/green_color"/>
        <ImageView
            android:id="@+id/blueCircle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_blue_circle"
            android:contentDescription="@string/blue_color"/>
        <ImageView
            android:id="@+id/blackCircle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_black_circle"
            android:contentDescription="@string/black_color"/>
        <ImageView
            android:id="@+id/rainbowCircle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_rainbow_circle"
            android:contentDescription="@string/rainbow_color"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/view_deco_render"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000">

        <TextView
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="잠시만 기다려 주세요!"
            android:fontFamily="@font/nanum_square_round"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/btn_deco_back"
            android:layout_width="52dp"
            android:layout_height="52dp"
            >
            <ImageView
                android:id="@+id/temp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/back_btn"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/image_deco_capture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        />

</RelativeLayout>